// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users Service when creating new user accounts will create a new user with all options set 1`] = `
{
  "email": "rule1@diveclub.ca",
  "emailVerified": false,
  "hasPassword": true,
  "id": "0ee2c4ff-1013-45df-9f13-e45ed2db9555",
  "isLockedOut": false,
  "lastLogin": undefined,
  "lastPasswordChange": undefined,
  "memberSince": 2023-10-02T10:23:02.003Z,
  "profile": {
    "avatar": undefined,
    "bio": "I don't talk about my dive clug",
    "experienceLevel": "Experienced",
    "location": "Vancouver, BC",
    "logBookSharing": "public",
    "memberSince": 2023-10-02T10:23:02.003Z,
    "name": "Tyler Durden, Esq.",
    "startedDiving": "2011",
    "userId": "0ee2c4ff-1013-45df-9f13-e45ed2db9555",
    "username": "Tyler.Durden",
  },
  "role": "user",
  "settings": {
    "depthUnit": "m",
    "pressureUnit": "bar",
    "temperatureUnit": "C",
    "weightUnit": "kg",
  },
  "username": "Tyler.Durden",
}
`;

exports[`Users Service when creating new user accounts will create a new user with all options set 2`] = `
UserEntity {
  "avatar": null,
  "bio": "I don't talk about my dive clug",
  "certifications": undefined,
  "customData": null,
  "depthUnit": "m",
  "email": "rule1@diveclub.ca",
  "emailLowered": "rule1@diveclub.ca",
  "emailVerificationToken": null,
  "emailVerificationTokenExpiration": null,
  "emailVerified": false,
  "experienceLevel": "Experienced",
  "friends": undefined,
  "fulltext": undefined,
  "id": "0ee2c4ff-1013-45df-9f13-e45ed2db9555",
  "isLockedOut": false,
  "lastLogin": null,
  "lastPasswordChange": null,
  "location": "Vancouver, BC",
  "logBookSharing": "public",
  "memberSince": 2023-10-02T10:23:02.003Z,
  "name": "Tyler Durden, Esq.",
  "oauth": undefined,
  "passwordHash": "<<HASHED PASSWORD>>",
  "passwordResetToken": null,
  "passwordResetTokenExpiration": null,
  "pressureUnit": "bar",
  "role": "user",
  "startedDiving": "2011",
  "tanks": undefined,
  "temperatureUnit": "C",
  "username": "Tyler.Durden",
  "usernameLowered": "tyler.durden",
  "weightUnit": "kg",
}
`;

exports[`Users Service when creating new user accounts will create new users with minimal options 1`] = `
{
  "email": undefined,
  "emailVerified": false,
  "hasPassword": false,
  "id": "0ee2c4ff-1013-45df-9f13-e45ed2db9555",
  "isLockedOut": false,
  "lastLogin": undefined,
  "lastPasswordChange": undefined,
  "memberSince": 2023-10-02T10:23:02.003Z,
  "profile": {
    "avatar": undefined,
    "bio": undefined,
    "experienceLevel": undefined,
    "location": undefined,
    "logBookSharing": "private",
    "memberSince": 2023-10-02T10:23:02.003Z,
    "name": undefined,
    "startedDiving": undefined,
    "userId": "0ee2c4ff-1013-45df-9f13-e45ed2db9555",
    "username": "Roger69_83",
  },
  "role": "user",
  "settings": {
    "depthUnit": "m",
    "pressureUnit": "bar",
    "temperatureUnit": "C",
    "weightUnit": "kg",
  },
  "username": "Roger69_83",
}
`;

exports[`Users Service when creating new user accounts will create new users with minimal options 2`] = `
UserEntity {
  "avatar": null,
  "bio": null,
  "certifications": undefined,
  "customData": null,
  "depthUnit": "m",
  "email": null,
  "emailLowered": null,
  "emailVerificationToken": null,
  "emailVerificationTokenExpiration": null,
  "emailVerified": false,
  "experienceLevel": null,
  "friends": undefined,
  "fulltext": undefined,
  "id": "0ee2c4ff-1013-45df-9f13-e45ed2db9555",
  "isLockedOut": false,
  "lastLogin": null,
  "lastPasswordChange": null,
  "location": null,
  "logBookSharing": "private",
  "memberSince": 2023-10-02T10:23:02.003Z,
  "name": null,
  "oauth": undefined,
  "passwordHash": null,
  "passwordResetToken": null,
  "passwordResetTokenExpiration": null,
  "pressureUnit": "bar",
  "role": "user",
  "startedDiving": null,
  "tanks": undefined,
  "temperatureUnit": "C",
  "username": "Roger69_83",
  "usernameLowered": "roger69_83",
  "weightUnit": "kg",
}
`;

exports[`Users Service when searching profiles Will return results sorted by memberSince in asc order 1`] = `
[
  {
    "memberSince": 2018-03-19T11:29:22.558Z,
    "username": "Gardner.Johnson74",
  },
  {
    "memberSince": 2018-04-19T21:25:00.549Z,
    "username": "Brigitte.Kihn",
  },
  {
    "memberSince": 2018-04-20T20:37:07.766Z,
    "username": "Lorenz59",
  },
  {
    "memberSince": 2018-05-13T22:06:14.604Z,
    "username": "Casimir_DuBuque",
  },
  {
    "memberSince": 2018-06-25T23:18:47.167Z,
    "username": "Lucy55",
  },
]
`;

exports[`Users Service when searching profiles Will return results sorted by memberSince in desc order 1`] = `
[
  {
    "memberSince": 2024-03-03T00:29:00.081Z,
    "username": "Steve54",
  },
  {
    "memberSince": 2024-01-22T09:55:07.775Z,
    "username": "Lavonne0",
  },
  {
    "memberSince": 2023-12-07T15:19:18.511Z,
    "username": "Erick_Roberts",
  },
  {
    "memberSince": 2023-11-21T22:50:56.464Z,
    "username": "Marie28",
  },
  {
    "memberSince": 2023-10-02T23:57:14.826Z,
    "username": "Eleonore.Hilpert",
  },
]
`;

exports[`Users Service when searching profiles Will return results sorted by username in asc order 1`] = `
[
  {
    "memberSince": 2022-01-03T11:06:19.499Z,
    "username": "Aaron_Wehner28",
  },
  {
    "memberSince": 2021-02-13T04:26:21.255Z,
    "username": "Aiyana.McCullough",
  },
  {
    "memberSince": 2018-10-20T04:40:09.678Z,
    "username": "Alessia.Upton8",
  },
  {
    "memberSince": 2022-08-31T08:43:02.480Z,
    "username": "Aliyah.Kunde4",
  },
  {
    "memberSince": 2019-06-29T09:03:36.186Z,
    "username": "Amara.Cummings13",
  },
]
`;

exports[`Users Service when searching profiles Will return results sorted by username in desc order 1`] = `
[
  {
    "memberSince": 2022-06-20T01:36:16.997Z,
    "username": "Winona.Doyle",
  },
  {
    "memberSince": 2020-04-08T12:22:42.152Z,
    "username": "Tyler30",
  },
  {
    "memberSince": 2021-11-03T23:21:09.613Z,
    "username": "Trey.Langosh",
  },
  {
    "memberSince": 2020-12-24T06:16:47.642Z,
    "username": "Tomasa33",
  },
  {
    "memberSince": 2019-05-01T03:13:57.366Z,
    "username": "Sven_White",
  },
]
`;

exports[`Users Service when searching profiles will allow filtering out profiles of users who are already friends 1`] = `
[
  {
    "id": "5e1c2714-ad34-418f-9840-df005c61ead9",
    "username": "Aaron_Wehner28",
  },
  {
    "id": "e8c59a17-31db-4ad0-8b7b-71873c39281e",
    "username": "Alessia.Upton8",
  },
  {
    "id": "df272310-96df-449a-bb4e-8663dea787f3",
    "username": "Aliyah.Kunde4",
  },
  {
    "id": "cbbdc55c-4f64-4fdf-ac63-5c42cfd80607",
    "username": "Amara.Cummings13",
  },
  {
    "id": "f449ef5a-6fb9-4459-8cdd-8cf813a0b820",
    "username": "Ashly71",
  },
  {
    "id": "9d72ecc0-b240-47c9-9d42-e6d196a3383f",
    "username": "Audreanne.Larkin79",
  },
  {
    "id": "959eb386-3ca8-42e1-9ce8-750a80e787eb",
    "username": "Barrett_Stracke77",
  },
  {
    "id": "1cde744c-c746-4f1a-84e5-3def80532ce3",
    "username": "Bell_Herzog",
  },
  {
    "id": "91456c36-010a-4c72-82b7-2330e98f63bb",
    "username": "Bernadette_Kihn",
  },
  {
    "id": "a966e53e-0d66-4dff-8f7c-2c3658eea2e4",
    "username": "Bernhard54",
  },
  {
    "id": "d826c5cc-dade-4480-8598-4d9a7995020a",
    "username": "Breanne_Cummings",
  },
  {
    "id": "a72967c3-cb27-45e3-b496-47c39cfb02c8",
    "username": "Brigitte.Kihn",
  },
  {
    "id": "9ae018c2-5a6b-432e-ba97-c83cb7e32880",
    "username": "Bryana.Glover",
  },
  {
    "id": "6f8f977c-5034-4ca2-90ce-36a8bead0678",
    "username": "Bryce_Thompson97",
  },
  {
    "id": "ec4211d5-1e50-4deb-8448-54760d78331e",
    "username": "Bulah_Bins",
  },
]
`;

exports[`Users Service when searching profiles will allow showing results beyond the first page 1`] = `
[
  {
    "id": "9d72ecc0-b240-47c9-9d42-e6d196a3383f",
    "memberSince": 2019-02-17T21:57:07.852Z,
    "username": "Audreanne.Larkin79",
  },
  {
    "id": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "memberSince": 2020-02-24T22:30:50.944Z,
    "username": "Ayla.Rippin",
  },
  {
    "id": "959eb386-3ca8-42e1-9ce8-750a80e787eb",
    "memberSince": 2023-05-22T08:27:23.626Z,
    "username": "Barrett_Stracke77",
  },
  {
    "id": "1cde744c-c746-4f1a-84e5-3def80532ce3",
    "memberSince": 2019-11-30T06:19:48.587Z,
    "username": "Bell_Herzog",
  },
  {
    "id": "91456c36-010a-4c72-82b7-2330e98f63bb",
    "memberSince": 2022-02-24T10:45:52.314Z,
    "username": "Bernadette_Kihn",
  },
  {
    "id": "a966e53e-0d66-4dff-8f7c-2c3658eea2e4",
    "memberSince": 2021-06-22T21:35:37.567Z,
    "username": "Bernhard54",
  },
  {
    "id": "921811b8-2bab-40e9-b491-dd79dea9caf8",
    "memberSince": 2020-10-25T14:48:30.836Z,
    "username": "Braulio19",
  },
]
`;

exports[`Users Service when searching profiles will limit "page" size 1`] = `
[
  {
    "id": "5e1c2714-ad34-418f-9840-df005c61ead9",
    "memberSince": 2022-01-03T11:06:19.499Z,
    "username": "Aaron_Wehner28",
  },
  {
    "id": "007f3635-e492-4a43-83e5-55de54b4e3fd",
    "memberSince": 2021-02-13T04:26:21.255Z,
    "username": "Aiyana.McCullough",
  },
  {
    "id": "e8c59a17-31db-4ad0-8b7b-71873c39281e",
    "memberSince": 2018-10-20T04:40:09.678Z,
    "username": "Alessia.Upton8",
  },
  {
    "id": "df272310-96df-449a-bb4e-8663dea787f3",
    "memberSince": 2022-08-31T08:43:02.480Z,
    "username": "Aliyah.Kunde4",
  },
  {
    "id": "cbbdc55c-4f64-4fdf-ac63-5c42cfd80607",
    "memberSince": 2019-06-29T09:03:36.186Z,
    "username": "Amara.Cummings13",
  },
  {
    "id": "f449ef5a-6fb9-4459-8cdd-8cf813a0b820",
    "memberSince": 2022-12-01T21:41:35.894Z,
    "username": "Ashly71",
  },
  {
    "id": "e8086bb6-10a8-4070-abb9-965acdc04ea3",
    "memberSince": 2019-05-28T07:18:27.652Z,
    "username": "Ashlynn_Kreiger86",
  },
]
`;

exports[`Users Service when searching profiles will perform text based searches 1`] = `
[
  {
    "id": "9eaaf549-2def-479e-a05b-75d706cf2a9f",
    "memberSince": 2018-05-13T22:06:14.604Z,
    "username": "Casimir_DuBuque",
  },
  {
    "id": "69d335bb-8061-4a34-86f0-f3190183a194",
    "memberSince": 2019-12-19T18:01:36.736Z,
    "username": "Linnea_Kutch23",
  },
]
`;
